--- a/FlashHR/Files/Base.lproj/LaunchScreen.storyboard
+++ b/FlashHR/Files/Base.lproj/LaunchScreen.storyboard
@@ -18,6 +18,7 @@
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="mWw-r4-1LK">
                                 <rect key="frame" x="0.0" y="47" width="390" height="763"/>
+                                <color key="tintColor" red="0.0" green="0.70588235290000001" blue="0.84705882349999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -36,7 +37,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="logo" width="826" height="659"/>
+        <image name="logo" width="826.66668701171875" height="659"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
